# DAIA

./: 1_extract_items.ipynb  2_retrieval.ipynb  3_output.ipynb  LICENSE  README.md  pyproject.toml  requirements.txt
data/: README.md
examples/: ex1.json  few_shot_food.json
src/daia/: main.py  settings.py
src/daia/agents/: agent.py  models.py  tools.py
src/daia/agents/tests/: test_agent.py  test_bolus.py  test_emb.py  test_llm.py  test_similarity.py
src/daia/daia_db/: README.md  data_cleaning.ipynb  db_model.py  write_db.py
src/daia/daia_db/tests/: test_conn.py  test_emb.py
src/daia/tests/: test_endpoints.py  test_settings.py
